[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/InputKeySummary/Assets/InputKeySummary_BodyFill_ForTitle.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/InputKeySummary/Assets/InputKeySummary_SideBorder.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/Assets/LeftArrowButton_Normal.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/Assets/RightArrowButton_Normal.png" type="Texture" id=5]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/Assets/RightArrowButton_Highlighted.png" type="Texture" id=6]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/Assets/LeftArrowButton_Highlighted.png" type="Texture" id=7]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/LeftRightSelectionPanel.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="LeftRightSelectionPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 161.0
margin_bottom = 40.0
mouse_filter = 2

[node name="LeftButton" type="TextureButton" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 35.0
size_flags_vertical = 6
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 7 )

[node name="MiddleContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 34.0
margin_right = 127.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BodyBackground" type="TextureRect" parent="HBoxContainer/MiddleContainer"]
margin_right = 93.0
margin_bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="HBoxContainer/MiddleContainer"]
margin_right = 3.0
margin_bottom = 40.0
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="HBoxContainer/MiddleContainer"]
margin_left = 90.0
margin_right = 93.0
margin_bottom = 40.0
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="HBoxContainer/MiddleContainer"]
margin_right = 93.0
margin_bottom = 3.0
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="HBoxContainer/MiddleContainer"]
margin_top = 37.0
margin_right = 93.0
margin_bottom = 40.0
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ContainerPanel" type="MarginContainer" parent="HBoxContainer/MiddleContainer"]
margin_top = 5.0
margin_right = 93.0
margin_bottom = 34.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="ChoiceLabel" type="Label" parent="HBoxContainer/MiddleContainer/ContainerPanel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 87.0
margin_bottom = 23.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Choice 01"
align = 1
valign = 1

[node name="RightButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 131.0
margin_top = 5.0
margin_right = 161.0
margin_bottom = 35.0
size_flags_vertical = 6
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
[connection signal="button_up" from="HBoxContainer/LeftButton" to="." method="_on_LeftButton_button_up"]
[connection signal="button_up" from="HBoxContainer/RightButton" to="." method="_on_RightButton_button_up"]
